# GameNgin

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  clear.sh  imgui.ini  pref.conf  run.sh  shaders.ini  textures.ini  world.ini
include/: box.h  buffer.h  core_minimal.h  gamengin.h  globals.h  input_handling.h  logger.h  object.h  object_drawable.h  rectangle.h  resource_manager.h  shader.h  texture.h  triangle.h  vertex.h  window.h  world.h
shaders/: basic.fragment.shader  basic.vertex.shader  fragment.shader  texture.fragment.shader  texture.vertex.shader  vertex.shader
src/: box.cpp  box.h  buffer.h  collision_detection.cpp  collision_detection.h  core_minimal.h  exe  game_manager.cpp  gamengin.cpp  globals.cpp  globals.h  imgui.ini  input_handling.cpp  logger.cpp  logger.h  main.cpp  makefile  object.cpp  object.h  objectGL.h  object_drawable.cpp  rectangle.cpp  resource_manager.cpp  shader.cpp  shader.h  shader_manager.cpp  texture.cpp  texture.h  texture_manager.cpp  triangle.cpp  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h  window_manager.cpp  world.cpp  world.h
src/engine/: actor.cpp  actor.h  box.cpp  box.h  main.cpp  texture.cpp  world.cpp  world.h
src/engine/core/: core.h
src/engine/core/IO/: logger.h
src/engine/core/design_pattern/: singleton.h
src/engine/core/object/: object_base.h
src/engine/core/opengl/: vertex_array.cpp  vertex_attributes.h
src/engine/core/shader/: shader.cpp  shader.h
src/engine/subsystems/: file_manager.cpp  file_manager.h  game_manager.cpp  game_manager.h  imgui_manager.cpp  imgui_manager.h  render_manager.cpp  render_manager.h  shader_manager.cpp  shader_manager.h  texture_manager.cpp  texture_manager.h  window_manager.cpp  window_manager.h
src/geometry/: abstract_object.h  object_interface.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
src/include/: box.h  buffer.h  collision_detection.h  core_minimal.h  game_manager.h  gamengin.h  globals.h  objectGL.h  resource_manager.h  shader.h  shader_manager.h  texture.h  texture_manager.h  transform.h  vertex.h  vertex_array.h  window.h  window_manager.h  world.h
src/subsystems/: file_manager.cpp  file_manager.h  game_manager.cpp  game_manager.h  imgui_manager.cpp  imgui_manager.h  render_manager.cpp  render_manager.h  shader_manager.cpp  shader_manager.h  texture_manager.cpp  texture_manager.h  window_manager.cpp  window_manager.h
